--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+2011-11-29
+---
+    - Fix bug with date parsing introduced by moving from PEAR's
+        date classes to the PHP DateTime class
+
 2011-11-20
 ---
     - Added ability to set whether to connect securely
